--- a/Dream_Flights/Views/Airlines/Index.cshtml
+++ b/Dream_Flights/Views/Airlines/Index.cshtml
@@ -4,7 +4,7 @@
 
 @Html.Partial("userAccess")
 
-
+<body background="Images\wallpaper_1.jpg" style="background-size: cover;">
 
 <div class="text-center">
     <div class="card">
@@ -77,3 +77,4 @@
 </div>
     </div>
 </div>
+</body>
