--- a/Dream_Flights/Views/BuyFlights/Index.cshtml
+++ b/Dream_Flights/Views/BuyFlights/Index.cshtml
@@ -4,6 +4,7 @@
 
 @*@Html.Partial("userAccess")*@
 
+
 <script>
     debugger;
 
@@ -38,6 +39,8 @@
 
 
 </script>
+
+<body background="Images\wallpaper_1.jpg" style="background-size: cover;">
 
 <div class="text-center">
     <div class="card">
@@ -96,3 +99,6 @@
         </div>
     </div>
 </div>
+
+</body>
+
