--- a/Dream_Flights/Views/SignIn/Index.cshtml
+++ b/Dream_Flights/Views/SignIn/Index.cshtml
@@ -2,52 +2,51 @@
     ViewData["Title"] = "Home Page";
 }
 
+<body background="Images\wallpaper_1.jpg" style="background-size: cover;">
+
 <div class="row justify-content-center">
     <div class="col-md-4">
-        <div class="card">
-            <header class="card-header" style="text-align: center">
-                <h4 class="card-title mt-2">Sign up</h4>
+        <div class="card" style=" margin-top:30px">
+            <header class="card-header bg-warning text-dark" style="text-align: center;">
+                <h3 class="card-title mt-2"><b>Sign up</b></h3>
             </header>
-            <article class="card-body">
-
-                <!--<form asp-controller="" asp-action="" method="post" class="">-->
+            <article class="card-body bg-dark text-light">
                     <div class="form-row">
                         <div class="col form-group">
                             <label>First name </label>
                             <input type="text" class="form-control" placeholder="" name="first_name" id="first_name" required>
-                        </div> <!-- form-group end.// -->
+                        </div> 
                         <div class="col form-group">
                             <label>Last name</label>
                             <input type="text" class="form-control" placeholder="" name="last_name" id="last_name" required>
-                        </div> <!-- form-group end.// -->
-                    </div> <!-- form-row end.// -->
+                        </div> 
+                    </div> 
 
                     <div class="form-group">
                         <label>Email address</label>
                         <input type="email" class="form-control" placeholder="" name="email" id="email" required>
-                    </div> <!-- form-group end.// -->
+                    </div> 
 
                     <div class="form-row">
                         <div class="col form-group">
                             <label>Create password</label>
                             <input class="form-control" type="password" name="pass1" id="pass1" required>
-                        </div> <!-- form-group end.// -->
+                        </div> 
                         <div class="col form-group">
                             <label>Confirme password</label>
                             <input class="form-control" type="password" name="pass2" id="pass2" required>
-                        </div> <!-- form-group end.// -->
-                    </div> <!-- form-row end.// -->
+                        </div> 
+                    </div> 
 
                     <div class="form-group">
-                        <button type="submit" class="btn btn-success btn-block" id="singin" onclick="SaveUser(first_name.value,last_name.value,email.value,pass1.value,pass2.value);"> Register  </button>
-  
-                    </div> <!-- form-group// -->
-                <!--</form>-->
-            </article> <!-- card-body end .// -->
-            <div class="border-top card-body text-center">Have an account? <a href="/Login">Log In</a></div>
-
-        </div> <!-- card.// -->
-    </div> <!-- col.//-->
+                        <button type="submit" class="btn btn-warning text-dark btn-block" id="singin" onclick="SaveUser(first_name.value,last_name.value,email.value,pass1.value,pass2.value);"> <b>Register </b></button>
+                    </div>
+            </article> 
+            <div class="border-top card-body text-center bg-warning"><b>Have an account? <a href="/Login">Log In</a></div></b>
+        </div> 
+</div> 
+</div>
+ </body>
 <script  type="text/javascript">
 
     function SaveUser(first_name,last_name,email,pass1,pass2) {    
@@ -88,7 +87,8 @@
 
      }
 </script>
- </div>
+
+
 
 
 
